 - *localeq* moved to using Drawer instead of ComboBox in UI. (thanks Anke)
 - *keyboardq* moved to using Drawer instead of ComboBox in UI. (thanks Anke)
 - *netinstall* now has a new *noncheckable* option for groups, which prevent
   it a group from being checked/uncheckd as a whole. You can still check
   individual items **in** the group though. (thanks Shivanand)
- *partition* can now pick LUKS or LUKS2. (thanks Jeremy)


# 3.3.0-alpha2 (2022-08-23)

Second alpha release, with updated ABI compatibility checking,
some 3.3.0 release goals, new features in modules and important bugfixes.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma
 - Evan James
 - Shivanand
 - Vitor Lopes

## Core ##

A core **TODO** is moving all library code into the `Calamares` namespace,
dropping the `CalamaresUtils` namespace. Modern C++ supports nested namespaces,
so in some cases we can use those. This has a drastic effect on ABI compatibility,
though, as functions move from one namespace to another. This needs to be
completed before a 3.3.0 with ABI stability is released.

## Modules ##

Module schemas have been updated to reflect all the incompatible changes.


# 3.3.0-alpha1 (2022-06-27)

Initial 3.3.0 alpha release to check the release scripts &c.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Aleksey Samoilov
 - Anke Boersma
 - Dan Simmons
 - Evan James
 - Peter Jung


# 3.3.0-pre-alpha (unreleased) #

This release contains contributions from (alphabetically by first name):
 - Anke Boersma
 - Anubhav Choudhary
 - Evan James
 - Vitor Lopes

This is a "minor" version change, but the size of the changes is very
large. Configuration files from previous versions of Calamares will
**certainly** need to be re-validated. Take heed of the many changes
in the *Modules* heading, below.

Users (distributions) are **strongly** advised to use the tools