@@ -71,6 +71,7 @@ sequence:
   - luksopenswaphookcfg
   - initcpiocfg
   - initcpio
+  - zfshostid
   - users
   - networkcfg
   - displaymanager
